syntax = "proto3";
option go_package = "github.com/skyline93/easybackup/proto";

package proto;

service ClusterManageService {
    rpc AddNode(AddNodeRequest) returns (AddNodeResponse) {}

    rpc Set(SetRequest) returns (SetResponse){}
    rpc Get(GetRequest) returns (GetResponse){}
}

message AddNodeRequest {
    string RaftId = 1;
    string RaftAddr = 2;
}

message AddNodeResponse {
    bool IsOk = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    bool IsOk = 1;
}


message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}
